--- a/portable_data/config/manifest.json
+++ b/portable_data/config/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "modultool_video_werkstatt_portable",
   "display_name": "Modultool – Video-Werkstatt",
-  "version": "1.0.2",
-  "build_date": "2026-02-03T03:52:45Z",
+  "version": "1.0.3",
+  "build_date": "2026-02-03T03:59:05Z",
   "schema_versions": {
     "settings": 1,
     "automation_rules": 1,
@@ -67,6 +67,6 @@
   },
   "release": {
     "channel": "release",
-    "notes": "Must-Pass Suite: Thumbnail-Regressionscheck."
+    "notes": "Werkstatt-Check Details: Klartext + Empfehlungen."
   }
 }
