--- a/portable_data/config/manifest.json
+++ b/portable_data/config/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "modultool_video_werkstatt_portable",
   "display_name": "Modultool – Video-Werkstatt",
-  "version": "1.0.3",
-  "build_date": "2026-02-03T03:59:05Z",
+  "version": "1.0.4",
+  "build_date": "2026-02-03T04:23:00Z",
   "schema_versions": {
     "settings": 1,
     "automation_rules": 1,
@@ -67,6 +67,6 @@
   },
   "release": {
     "channel": "release",
-    "notes": "Werkstatt-Check Details: Klartext + Empfehlungen."
+    "notes": "Start-Routine: Werkstatt-Check mit klaren Start-Hinweisen."
   }
 }
