--- a/portable_data/config/manifest.json
+++ b/portable_data/config/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "modultool_video_werkstatt_portable",
   "display_name": "Modultool – Video-Werkstatt",
-  "version": "1.0.8",
-  "build_date": "2026-02-03T06:00:00Z",
+  "version": "1.0.9",
+  "build_date": "2026-02-03T05:13:38Z",
   "schema_versions": {
     "settings": 1,
     "automation_rules": 1,
@@ -67,6 +67,6 @@
   },
   "release": {
     "channel": "release",
-    "notes": "Preflight: Debug-Modus mit Log-Leveln und Debug-Logausgabe ergänzt."
+    "notes": "Preflight: Watchfolder-Schreibrecht prüfen und klare Hinweise anzeigen."
   }
 }
