--- a/portable_data/config/manifest.json
+++ b/portable_data/config/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "modultool_video_werkstatt_portable",
   "display_name": "Modultool – Video-Werkstatt",
-  "version": "1.0.10",
-  "build_date": "2026-02-03T05:24:30Z",
+  "version": "1.0.11",
+  "build_date": "2026-02-03T05:47:44Z",
   "schema_versions": {
     "settings": 1,
     "automation_rules": 1,
@@ -67,6 +67,6 @@
   },
   "release": {
     "channel": "release",
-    "notes": "Maintenance: Settings-Ints werden sicher geparst, mit Warnung und Fallback im Summary-Log."
+    "notes": "Qualitäts-Checks: Formatprüfung mit ruff, zentrale Pfadlogik und klarere Hinweise bei Abhängigkeits-Installationsfehlern."
   }
 }
