--- a/portable_data/config/manifest.json
+++ b/portable_data/config/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "modultool_video_werkstatt_portable",
   "display_name": "Modultool – Video-Werkstatt",
-  "version": "1.0.13",
-  "build_date": "2026-02-03T07:25:00Z",
+  "version": "1.0.14",
+  "build_date": "2026-02-05T10:30:00Z",
   "schema_versions": {
     "settings": 1,
     "automation_rules": 1,
@@ -67,6 +67,6 @@
   },
   "release": {
     "channel": "release",
-    "notes": "Start-Routine: Debug-Modus zeigt Pip- und Preflight-Details ohne Log-Unterdrückung."
+    "notes": "Dokumentation: Debug-Log kann direkt in Datei gespeichert werden (Start-Checkliste ergänzt)."
   }
 }
