--- a/portable_data/config/manifest.json
+++ b/portable_data/config/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "modultool_video_werkstatt_portable",
   "display_name": "Modultool – Video-Werkstatt",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "build_date": "2026-02-08T12:00:00Z",
   "schema_versions": {
     "settings": 1,
@@ -67,6 +67,6 @@
   },
   "release": {
     "channel": "release",
-    "notes": "Maintenance: Dateifehler werden als Warnungen im Summary protokolliert."
+    "notes": "Preflight: fehlenden Watchfolder automatisch anlegen (Self-Repair)."
   }
 }
