--- a/portable_data/config/manifest.json
+++ b/portable_data/config/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "modultool_video_werkstatt_portable",
   "display_name": "Modultool – Video-Werkstatt",
-  "version": "1.0.18",
-  "build_date": "2026-02-09T12:00:00Z",
+  "version": "1.0.19",
+  "build_date": "2026-02-03T07:36:12Z",
   "schema_versions": {
     "settings": 1,
     "automation_rules": 1,
@@ -67,6 +67,6 @@
   },
   "release": {
     "channel": "release",
-    "notes": "Todo-Liste um neue Roadmap-Punkte erweitert."
+    "notes": "Automatik: leere Dateinamen-Slugs erhalten einen sicheren Fallback."
   }
 }
