--- a/portable_data/config/manifest.json
+++ b/portable_data/config/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "modultool_video_werkstatt_portable",
   "display_name": "Modultool – Video-Werkstatt",
-  "version": "1.0.22",
-  "build_date": "2026-02-03T08:06:18Z",
+  "version": "1.0.23",
+  "build_date": "2026-02-04T10:15:00Z",
   "schema_versions": {
     "settings": 1,
     "automation_rules": 1,
@@ -67,6 +67,6 @@
   },
   "release": {
     "channel": "release",
-    "notes": "Automatik: Fehlerberichte erscheinen im Report/GUI, stabile Downloads werden per Hash geprüft."
+    "notes": "Validierung: Ausgabe-Pfade prüfen Schreibrechte; Fehlerberichte validieren base_data_dir; Preflight prüft Settings-JSON."
   }
 }
